// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`generateIssue > falls back to plain locations and titles without repo context 1`] = `
"The following TODO has expired:

* [A date passed](date:2020-01-01)

It is present in the following files:

* [ ] notes.md:1:1

***

This issue has been automatically created by \`todone\`.

<!-- Please do not edit the following comments, they are automatically generated by todone. -->

<!--todone start-->

<!--{"todoUrl":"date:2020-01-01"}-->

<!--todone end-->
"
`;

exports[`generateIssue > renders a full issue with permalinks and an embedded data zone 1`] = `
"The following TODO has expired as of <time datetime="2020-05-06T00:00:00.000Z">2020-05-06</time>:

* <https://github.com/octo/repo/issues/5>

It is present in the following files:

* [ ] <https://github.com/octo/repo/blob/abc123/src%2Fmain.ts#L3>

* [ ] <https://github.com/octo/repo/blob/abc123/src%2Fother.ts#L10>

***

This issue has been automatically created by \`todone\`.

<!-- Please do not edit the following comments, they are automatically generated by todone. -->

<!--todone start-->

<!--{"todoUrl":"https://github.com/octo/repo/issues/5"}-->

<!--todone end-->
"
`;
